Allow editing and listing own scenes (#560)
* add scenes author fk

* add "me" endpoint

* more test, more endpoints

* update openapi

* resolve mypy issue
